syntax = "proto3";

package readview;

option go_package = "github.com/martinmhan/tweet-app-api/cmd/readview/proto";

service ReadView {
  rpc addUser(User) returns (SimpleResponse) {}
  rpc addTweet(Tweet) returns (SimpleResponse) {}
  rpc addFollow(Follow) returns (SimpleResponse) {}
  rpc getUserByUserID(UserID) returns (User) {}
  rpc getUserByUsername(Username) returns(User) {}
  rpc getFollowers(UserID) returns (Follows) {}
  rpc getFollowees(UserID) returns (Follows) {}
  rpc getTweets(UserID) returns (Tweets) {}
  rpc getTimeline(UserID) returns (Tweets) {}
}

message SimpleResponse {
  string message = 1;
}

message User {
  string ID = 1;
  string Username = 2;
  string Password = 3;
}

message Username {
  string Username = 1;
}

message UserID {
  string UserID = 1;
}

message Follow {
  string FollowerUserID = 1;
  string FollowerUsername = 2;
  string FolloweeUserID = 3;
  string FolloweeUsername = 4;
}

message Follows {
  repeated Follow Follows = 1;
}

message Tweet {
  string ID = 1;
  string UserID = 2;
  string Username = 3;
  string Text = 4;
}

message Tweets {
  repeated Tweet Tweets = 1;
}
